<resources>
    <string name="app_name">手机助手</string>
    <string name="title_activity_base">baseActivity</string>
    <string name="my_code">我的二维码</string>
    <string name="last_connect">上次连接</string>
    <string name="dialog_text">请稍后</string>
    <string name="already_dev">已配对设备</string>
    <string name="unready_dev">未配对设备</string>
    <string name="refresh">刷新</string>
    <string name="refresh_ing">正在刷新</string>
    <string name="dev_refresh_ing">蓝牙设备正在刷新中</string>
    <string name="bind_error">配对失败</string>
    <string name="connect_error">连接失败,请检查眼镜蓝牙是否打开</string>
    <string name="dev_error">蓝牙设备异常</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="connect_exception">设备断开连接</string>
    <string name="open_bluetooth">请打开蓝牙</string>
    <string name="title_activity_code">CodeActivity</string>
    <string name="glasses_info">眼镜信息</string>
    <string name="wifi_setting">WIFI 设置</string>
    <string name="wifi_info">WIFI信息</string>
    <string name="call_setting">呼叫设置</string>
    <string name="disconnect">断开连接</string>
    <string name="connect_dev">连接对象：</string>
    <string name="title_activity_glasses_info">GlassesInfo</string>
    <string name="dev_name">设备名称：</string>
    <string name="call_name">号码：</string>
    <string name="change">修改</string>
    <string name="dev_sn">设备 SN：</string>
    <string name="dev_versions">硬件版本：</string>
    <string name="android_versions">安卓版本：</string>
    <string name="storage_size">存储空间：</string>
    <string name="storage_residue">剩余空间：</string>
    <string name="storage_electric">剩余电量：</string>
    <string name="load_fail">加载失败</string>
    <string name="change_name">请输入设备名称</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="input_name">请输入需要修改的设备名称</string>
    <string name="change_win">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="connect_state">连接状态：</string>
    <string name="setting">设置</string>
    <string name="unConnect">未连接设备</string>
    <string name="connected">已连接</string>
    <string name="password">密码：</string>
    <string name="wifi_set_fail">wifi设置失败</string>
    <string name="load_ing">正在加载中....</string>
    <string name="input_ssid">请输入SSID</string>
    <string name="input_password">请输入wifi密码</string>
    <string name="current_number">当前号码：</string>
    <string name="input_num">请输入需要修改的号码</string>
    <string name="input_glasses_name">请输入需要修改的眼镜名称</string>
    <string name="last_connect_numm">上次连接为空</string>
    <string name="current_number_null">当前号码为空</string>
    <string name="scan_code">扫描二维码连接设备</string>
    <string name="back">返回</string>
    <string name="hint">提示</string>
    <string name="again_connect">连接中断，是否重新连接</string>
    <string name="call_dialog_title_name">请输入需要设置的号码</string>
    <string name="bind_win">配对成功</string>
    <string name="seek_finish">搜索完成</string>
    <string name="bluetooth_exception">蓝牙异常</string>
    <string name="pair_ing">正在配对....</string>
</resources>
