<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.jld.glasses.activity.SettingActivity"
    >

    <include
        android:id="@+id/connect_title_bar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_title_bar"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:background="@drawable/btn_click"
            android:id="@+id/btn_glasses_info"
            android:layout_width="@dimen/btn_wide"
            android:layout_height="@dimen/btn_height"
            android:text="@string/glasses_info"/>

        <Button
            android:background="@drawable/btn_click"
            android:id="@+id/btn_wifi_setting"
            android:layout_width="@dimen/btn_wide"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="14dp"
            android:text="@string/wifi_setting"/>

        <Button
            android:background="@drawable/btn_click"
            android:id="@+id/btn_call_setting"
            android:layout_marginTop="14dp"
            android:layout_width="@dimen/btn_wide"
            android:layout_height="@dimen/btn_height"
            android:text="@string/call_setting"/>

        <Button
            android:background="@drawable/btn_click"
            android:id="@+id/btn_disconnect"
            android:layout_marginTop="14dp"
            android:layout_width="@dimen/btn_wide"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="100dp"
            android:text="@string/disconnect"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_dev_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/connect_dev"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        />
</RelativeLayout>
