<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/dialog_shape"
              android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_title_height"
        android:gravity="center"
        android:text="@string/hint"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_title_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_content_height"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again_connect"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_content_size"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bottom_height"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_left_pre_bg"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="16dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/colorLine"
            />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_right_pre_bg"
            android:text="@string/confirm"
            android:textColor="#000"
            android:textSize="16dp"/>
    </LinearLayout>
</LinearLayout>