<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wifi_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.jld.glasses.activity.WifiSetting">

    <include
        android:id="@+id/setting_title_bar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_below="@+id/setting_title_bar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                style="@style/WifiSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/connect_state"/>
            <TextView
                android:id="@+id/tv_connect_state"
                style="@style/WifiSetting"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/WifiSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="SSID："/>

            <TextView
                android:id="@+id/tv_ssid"
                style="@style/WifiSetting"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_wifi_setting"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_click"
            android:text="@string/setting"
            android:textSize="20dp"
            android:layout_marginTop="140dp"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/tv_dev_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/connect_dev"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        />
</RelativeLayout>
