<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/dialog_width"
            android:layout_height="@dimen/dialog_title_height"
            android:gravity="center"
            android:text="@string/wifi_setting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_title_size"/>

        <View
            android:layout_width="@dimen/dialog_width"
            android:layout_height="1dp"
            android:background="@color/colorLine"
            />

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SSID："
                android:textColor="@android:color/black"
                android:textSize="18dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_set_ssid"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="18dp"
                    />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorLine"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_set_password"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="18dp"
                    />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorLine"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/dialog_width"
            android:layout_height="1dp"
            android:background="@color/colorLine"
            />

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="@dimen/dialog_bottom_height"
            android:orientation="horizontal"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_pre_bg"
                android:text="@string/cancel"
                android:textColor="#000"
                android:textSize="@dimen/dialog_below_size"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/colorLine"
                />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_pre_bg"
                android:text="@string/confirm"
                android:textColor="#000"
                android:textSize="@dimen/dialog_below_size"/>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_dialog_close"
        android:layout_width="@dimen/dialog_close_size"
        android:layout_height="@dimen/dialog_close_size"
        android:background="@null"
        android:visibility="gone"
        android:src="@mipmap/close_dialog"/>
</RelativeLayout>